# NotesAPI

./: .env  .gitignore  .pre-commit-config.yaml  .test.env  README.md  batadase.py  docker-compose-test.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  setings.py
.github/workflows/: blank.yml
alembic/: env.py
app/: Dockerfile  alembic.ini  batadase.py  db.py  entrypoint.sh  main.py  requirements.txt  setings.py
app/alembic/: env.py
app/alembic/versions/: c9189735df48_version_1.py
app/auth/: auth.py  manager.py  models.py  routers.py  schemas.py
app/note_app/: crud.py  filters.py  models.py  repositorie.py  routers.py  schemas.py
app/utils/: repository.py
auth/: manager.py  models.py  routers.py  schemas.py
note_app/: crud.py  filters.py  models.py  routers.py  schemas.py
tests/: conftest.py
tests/test_auth/: conftest.py  test_auth.py  test_auto.py
tests/tests_note_app/: conftest.py  test_routers_note.py
