[tool.poetry]
name = "notesapi"
version = "0.1.0"
description = ""
authors = ["KuksovSV <ser.kuksov@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.21"
pydantic = "^1.10.0"
fastapi-filter = "^0.6.2"
fastapi-users = "^12.1.2"
alembic = "^1.12.0"
fastapi-users-db-sqlalchemy = "^6.0.1"
asyncpg = {version = "^0.28.0", extras = ["postgres"]}
psycopg2-binary = {version = "^2.9.7", extras = ["postgres"]}

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.291"
black = "^23.9.1"
mypy = "^1.5.1"

[tool.poetry.group.test.dependencies]
coverage = "^7.3.1"
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pytest-dotenv = "^0.5.2"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
notes = "uvicorn main:app --reload"

[tool.ruff]
exclude = [
    "alembic",
]

[tool.black]
exclude = "/alembic"
